--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.542.0",
     "modern-css-reset": "^1.4.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
