--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "react-slick": "^0.30.3",
+    "react-visibility-sensor": "^5.1.1",
     "rollup": "^4.44.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10"
