--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "modern-css-reset": "^1.4.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
