--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "aos": "^2.3.4",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
@@ -19,7 +22,7 @@
     "lucide-react": "^0.542.0",
     "modern-css-reset": "^1.4.0",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
+    "react-bootstrap": "^2.10.10",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
