--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
+    "@react-map/india": "^1.0.21",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
+    "jquery": "^3.7.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "modern-css-reset": "^1.4.0",
@@ -28,6 +30,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-india-states-map": "^1.0.0",
     "react-router-dom": "^6.30.1",
     "react-slick": "^0.30.3",
     "react-visibility-sensor": "^5.1.1",
