--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "@react-map/india": "^1.0.21",
+    "@vishalvoid/react-india-map": "^1.2.0",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
@@ -21,6 +22,7 @@
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "modern-css-reset": "^1.4.0",
@@ -31,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-india-states-map": "^1.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.30.1",
     "react-slick": "^0.30.3",
     "react-visibility-sensor": "^5.1.1",
