--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "jquery": "^3.7.1",
