--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "modern-css-reset": "^1.4.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
